user create and retrieve all users
