# src/api/v1/user/controllers/findAllItems.js
@@ -1,0 +1,34 @@
+const userService = require("../../../../service/user");
+// const { query } = require("../../../../utils");
+const defaults = require("../../../../config/defaults");
+
+const findAllItems = async (req, res, next) => {
+  const page = req.query.page || defaults.page;
+  const limit = req.query.limit || defaults.limit;
+  const sortType = req.query.sort_type || defaults.sortType;
+  const sortBy = req.query.sort_by || defaults.sortBy;
+  const search = req.query.search || defaults.search;
+  const { path, url, query } = req;
+
+  try {
+    // data
+    const { users, ...rest } = await userService.findAllItems({
+      page,
+      limit,
+      sortType,
+      sortBy,
+      search,
+      request: { path, url, query },
+    });
+
+    res.status(200).json({
+      code: 200,
+      data: users,
+      ...rest,
+    });
+  } catch (e) {
+    next(e);
+  }
+};
+
+module.exports = findAllItems;
