# swagger.yaml
@@ -13,8 +13,14 @@ servers:
 tags:
   - name: Auth
     description: Authentication Endpoints (public)
+  - name: User
+    description: User Endpoints (private)
   - name: Product
     description: Product Endpoints (public+private)
+  - name: Category
+    description: Category Endpoints (public+private)
+  - name: SubCategory
+    description: SubCategory Endpoints (public+private)
   - name: Review
     description: Review Endpoints (Private)
   - name: User
@@ -22,6 +28,7 @@ tags:
 paths:
   "/auth/register":
     post:
+      operationId: register
       description: "Create a new account"
       tags:
         - "Auth"
@@ -67,9 +74,126 @@ paths:
                       access_token:
                         type: string
                         example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c"
+  "/auth/login":
+    post:
+      operationId: login
+      description: "login an account"
+      tags:
+        - "Auth"
+      requestBody:
+        content:
+          "application/json":
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                  example: example@domain.com
+                password:
+                  type: string
+                  format: password
+                  example: password13r
+              required:
+                - "username"
+                - "password"
+      responses:
+        "200":
+          description: user login
+          content:
+            "application/json":
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    format: int32
+                    example: 201
+                  message:
+                    type: string
+                    example: Login Successful
+                  data:
+                    type: object
+                    properties:
+                      access_token:
+                        type: string
+                        example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c"
+  "/users":
+    post:
+      operationId: createUser
+      security:
+        - bearerAuth: []
+      description: "Create a new User"
+      tags:
+        - "User"
+      requestBody:
+        content:
+          "application/json":
+            schema:
+              $ref: "#components/schemas/UserRequest"
+      responses:
+        "201":
+          description: Create user by adimin
+          content:
+            "application/json":
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    format: int32
+                    example: 201
+                  message:
+                    type: string
+                    example: Added User, Successful
+                  data:
+                    type: object
+                    properties:
+                    $ref: "#components/schemas/UserResponse"
+        "400":
+          $ref: "#/components/responses/400"
+        "500":
+          "$ref": "#/components/responses/500"
+    get:
+      operationId: AllProducts
+      security:
+        - bearerAuth: []
+      description: "Retrive all products"
+      tags:
+        - "User"
+      parameters:
+        - $ref: "#/components/parameters/pageParam"
+        - $ref: "#/components/parameters/limitParam"
+        - $ref: "#/components/parameters/sortTypeParam"
+        - $ref: "#/components/parameters/sortByParam"
+        - $ref: "#/components/parameters/searchParam"
 
+      responses:
+        "200":
+          description: Retrive all datas
+          content:
+            "application/json":
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    format: int32
+                    example: 200
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                      $ref: "#components/schemas/UserResponse"
+        "400":
+          $ref: "#/components/responses/400"
+        "500":
+          "$ref": "#/components/responses/500"
   "/products":
     post:
+      operationId: createProduct
+      security:
+        - bearerAuth: []
       description: "Create a new Product"
       tags:
         - "Product"
@@ -77,7 +201,9 @@ paths:
         content:
           "application/json":
             schema:
-              $ref: "#components/schemas/Product"
+              type: object
+              # $ref: "#components/schemas/UserCommon"
+              # $ref: "#components/schemas/UserCommon"
       responses:
         "201":
           description: Signup Successful
@@ -97,17 +223,25 @@ paths:
                     type: object
                     properties:
                     $ref: "#components/schemas/Product"
+        "400":
+          $ref: "#/components/responses/400"
+        "500":
+          "$ref": "#/components/responses/500"
     get:
-      description: "Create a new Product"
+      operationId: AllProducts
+      description: "Retrive all products"
       tags:
         - "Product"
-      # requestBody:
-      #   content:
-      #     "application/json":
-      #       schema:
+      parameters:
+        - $ref: "#/components/parameters/pageParam"
+        - $ref: "#/components/parameters/limitParam"
+        - $ref: "#/components/parameters/sortTypeParam"
+        - $ref: "#/components/parameters/sortByParam"
+        - $ref: "#/components/parameters/searchParam"
+
       responses:
-        "201":
-          description: Signup Successful
+        "200":
+          description: Fetching all products
           content:
             "application/json":
               schema:
@@ -126,7 +260,148 @@ paths:
                       type: object
                       properties:
                       $ref: "#components/schemas/Product"
+        "500":
+          "$ref": "#/components/responses/500"
+  "/category":
+    post:
+      operationId: createCategory
+      security:
+        - bearerAuth: []
+      description: "Create a new Categry"
+      tags:
+        - "Category"
+      requestBody:
+        content:
+          "application/json":
+            schema:
+              $ref: "#components/schemas/Category"
+      responses:
+        "201":
+          description: response of new category!
+          content:
+            "application/json":
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    format: int32
+                    example: 201
+                  message:
+                    type: string
+                    example: Category has been added!
+                  data:
+                    type: object
+                    properties:
+                    $ref: "#components/schemas/Category"
+        "500":
+          "$ref": "#/components/responses/500"
+    get:
+      operationId: AllCategory
+      description: "Retrive all categories"
+      tags:
+        - "Category"
+      parameters:
+        - $ref: "#/components/parameters/pageParam"
+        - $ref: "#/components/parameters/limitParam"
+        - $ref: "#/components/parameters/sortTypeParam"
+        - $ref: "#/components/parameters/sortByParam"
+        - $ref: "#/components/parameters/searchParam"
 
+      responses:
+        "200":
+          description: fetching all categories
+          content:
+            "application/json":
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    code:
+                      type: integer
+                      format: int32
+                      example: 201
+                    message:
+                      type: string
+                      example: Get all categories!
+                    data:
+                      type: object
+                      properties:
+                      $ref: "#components/schemas/SubCategory"
+        "500":
+          "$ref": "#/components/responses/500"
+  "/sub-category":
+    post:
+      operationId: createSubCategory
+      security:
+        - bearerAuth: []
+      description: "Create a new sub Categry"
+      tags:
+        - "SubCategory"
+      requestBody:
+        content:
+          "application/json":
+            schema:
+              $ref: "#components/schemas/Category"
+      responses:
+        "201":
+          description: Create a new sub category!
+          content:
+            "application/json":
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    format: int32
+                    example: 201
+                  message:
+                    type: string
+                    example: Category has been added!
+                  data:
+                    type: object
+                    properties:
+                    $ref: "#components/schemas/SubCategory"
+        "400":
+          $ref: "#/components/responses/400"
+        "500":
+          "$ref": "#/components/responses/500"
+    get:
+      description: "Retrive all datas"
+      tags:
+        - "SubCategory"
+      parameters:
+        - $ref: "#/components/parameters/pageParam"
+        - $ref: "#/components/parameters/limitParam"
+        - $ref: "#/components/parameters/sortTypeParam"
+        - $ref: "#/components/parameters/sortByParam"
+        - $ref: "#/components/parameters/searchParam"
+
+      responses:
+        "201":
+          description: fetching categories
+          content:
+            "application/json":
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    code:
+                      type: integer
+                      format: int32
+                      example: 201
+                    message:
+                      type: string
+                      example: Get all categories!
+                    data:
+                      type: object
+                      properties:
+                      $ref: "#components/schemas/Category"
+
+        "500":
+          "$ref": "#/components/responses/500"
 components:
   securitySchemes:
     bearerAuth:
@@ -134,6 +409,56 @@ components:
       scheme: bearer
       bearerFormat: JWT
   schemas:
+    User:
+      allOf:
+        - $ref: "#components/schemas/UserCommon"
+          # - type: object
+          # properties:
+
+    UserRequest:
+      allOf:
+        - $ref: "#components/schemas/UserCommon"
+        - type: object
+          properties:
+            password:
+              type: string
+              format: password
+          required: [name, email, password]
+
+    UserResponse:
+      allOf:
+        - $ref: "#components/schemas/UserCommon"
+        - $ref: "#components/schemas/Timestamp"
+        - type: object
+
+    UserCommon:
+      properties:
+        name:
+          type: string
+          example: Taher
+        email:
+          type: string
+          format: email
+          example: example@domain.com
+        username:
+          type: string
+          example: taher267
+        phone_number:
+          type: string
+          example: 019xxxxxxxxx
+        # password:
+        #   type: string
+        #   format: password
+        passwordAllow:
+          type: boolean
+        lastLogin:
+          type: string
+          format: data-time
+        status:
+          type: string
+          # example: active
+          enum: ["active", "inactive", "pending"]
+
     Product:
       allOf:
         - type: object
@@ -177,7 +502,32 @@ components:
                 example: "http://example.com/image.png"
           required: ["title", "sub_category_id", "SKU", "price"]
         - $ref: "#/components/schemas/Timestamp"
-
+    Category:
+      allOf:
+        - type: object
+          properties:
+            title:
+              type: string
+              example: T-Shirt
+            description:
+              type: string
+              example: "No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documenton"
+          required: [name]
+    SubCategory:
+      allOf:
+        - type: object
+          properties:
+            name:
+              type: string
+              example: Smart T-Shirt
+            description:
+              type: string
+              example: "No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documenton"
+            category_id:
+              type: string
+              description: category id (mongodb object id)
+              example: "6568c4210a26245b8cb27313"
+          required: [name]
     Timestamp:
       type: object
       properties:
@@ -189,3 +539,123 @@ components:
           type: string
           format: data-time
           # example: "2023-09-20T00:25:31.597Z"
+  parameters:
+    pageParam:
+      in: query
+      name: page
+      description: current page number
+      schema:
+        type: integer
+        format: int32
+        example: 1
+    limitParam:
+      in: query
+      name: limit
+      description: maximum items items to be returned
+      schema:
+        type: integer
+        format: int32
+        example: 10
+    sortTypeParam:
+      in: query
+      name: sort_type
+      description: type of sort (asc or dsc)
+      schema:
+        type: string
+        enum: [asc, dsc]
+        example: dsc
+    sortByParam:
+      in: query
+      name: sort_by
+      description: Sort key
+      schema:
+        type: string
+        example: createdAt
+    searchParam:
+      in: query
+      name: search
+      description: Search term
+      schema:
+        type: string
+        example: title
+  responses:
+    "500":
+      description: "Internal Server Error"
+      content:
+        "application/json":
+          schema:
+            type: object
+            properties:
+              code:
+                type: integer
+                format: int32
+                example: 500
+              error:
+                type: string
+                example: Internal Server Error
+              message:
+                type: string
+                example: We are sorry for the inconvenience. Please try again later
+    "400":
+      description: "Bad Request"
+      content:
+        "application/json":
+          schema:
+            type: object
+            properties:
+              code:
+                type: integer
+                format: int32
+                example: 400
+              error:
+                type: string
+                example: Bad Request
+              data:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    field:
+                      type: string
+                      example: email
+                    message:
+                      type: string
+                      example: Invalid email
+                    in:
+                      type: string
+                      enum: [query, body]
+                      example: body
+    "401":
+      description: Unauthorized
+      content:
+        "application/json":
+          schema:
+            type: object
+            properties:
+              code:
+                type: integer
+                format: int32
+                example: 401
+              error:
+                type: string
+                example: Unauthorized
+              message:
+                type: string
+                example: You don't have the right permissions
+    "404":
+      description: Resource Not Found
+      content:
+        "application/json":
+          schema:
+            type: object
+            properties:
+              code:
+                type: integer
+                format: int32
+                example: 404
+              error:
+                type: string
+                example: Not Found
+              message:
+                type: string
+                example: Requested resource not found
